# tensorflow_musa_extension

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.en.md  README.md  build.sh  install-hooks.sh
.github/workflows/: pr-validation.yml
docs/: DEBUG_GUIDE.md
hooks/: commit-msg  install-hooks.sh  pre-commit  pre-push-branch-protection
musa_ext/kernels/: musa_SquaredDifference_op.cc  musa_ZerosLike_op.cc  musa_abs_op.cc  musa_add_op.cc  musa_addn_kernel.mu  musa_addn_op.cc  musa_applyadam_op.cc  musa_arg_op.cc  musa_argmax_op.cc  musa_assign_op.cc  musa_biasadd_grad_op.cc  musa_biasadd_op.cc  musa_broadcast_gradient_args_op.cc  musa_broadcast_to_op.cc  musa_cast_kernels.mu  musa_cast_op.cc  musa_concat_op.cc  musa_const_op.cc  musa_conv2d_op.cc  musa_diag_part_kernel.mu  musa_diag_part_op.cc  musa_div_no_nan_op.cc  musa_div_no_nan_op.mu  musa_embedding_kernel.mu  musa_embedding_op.cc  musa_equal_op.cc  musa_erf_kernel.mu  musa_erf_op.cc  musa_exp_op.cc  musa_expand_dims_op.cc  musa_fill_op.cc  musa_floor_div_op.cc  musa_floor_mod_op.cc  musa_fused_batchnorm_op.cc  musa_fused_matmul_op.cc  musa_gather_kernel.mu  musa_gather_nd_op.cc  musa_gather_op.cc  musa_greater_op.cc  musa_identity_op.cc  (+78 more)
musa_ext/kernels/array/: musa_ZerosLike_op.cc  musa_broadcast_gradient_args_op.cc  musa_broadcast_to_op.cc  musa_concat_offset_op.cc  musa_concat_op.cc  musa_const_op.cc  musa_diag_part_op.cc  musa_expand_dims_op.cc  musa_fill_functor.h  musa_fill_op.cc  musa_gather_kernel.mu  musa_gather_nd_op.cc  musa_gather_op.cc  musa_identity_op.cc  musa_invertpermutation_kernel.mu  musa_invertpermutation_op.cc  musa_pack_kernel.mu  musa_pack_op.cc  musa_pad_op.cc  musa_placeholder_op.cc  musa_range_kernel.mu  musa_range_op.cc  musa_reshape_op.cc  musa_resourcegather_op.cc  musa_shape_op.cc  musa_size_op.cc  musa_slice_op.cc  musa_split_op.cc  musa_split_v_op.cc  musa_squeeze_op.cc  musa_strided_slice_op.cc  musa_tensordot_bias_op.cc  musa_tensorinteraction_op.cc  musa_tensorlist_reserve_op.cc  musa_tensorlist_stack_op.cc  musa_tile_op.cc  musa_transpose_functor.h  musa_transpose_op.cc  musa_unique_op.cc  musa_where_kernel.mu  (+1 more)
musa_ext/kernels/control_flow/: musa_merge_op.cc  musa_stateless_while_op.cc  musa_switch_op.cc
musa_ext/kernels/io/: musa_restore_v2_op.cc  musa_sharded_filename_op.cc
musa_ext/kernels/logging/: musa_logging_ops.cc
musa_ext/kernels/math/: musa_SquaredDifference_op.cc  musa_abs_op.cc  musa_add_kernel.mu  musa_add_op.cc  musa_addn_kernel.mu  musa_addn_op.cc  musa_argmax_op.cc  musa_bitwise_and_kernel.mu  musa_bitwise_and_op.cc  musa_cast_functor.h  musa_cast_kernels.mu  musa_cast_op.cc  musa_clip_op.cc  musa_conv2d_backward_op.cc  musa_conv2d_op.cc  musa_div_no_nan_op.mu  musa_einsum_op.cc  musa_equal_op.cc  musa_erf_kernel.mu  musa_erf_op.cc  musa_exp_op.cc  musa_expm1_kernel.mu  musa_expm1_op.cc  musa_greater_op.cc  (+42 more)
musa_ext/mu/: device_register.cc  device_register.h  kernel_register.cc  kernel_register.h
musa_ext/utils/: logging.h  musa_einsum_op_util.h  musa_tensor_list_utils.cc  musa_tensor_list_utils.h
test/: __init__.py  addn_op_test.py  assign_op_test.py  conv2d_op_test.py  interact_op_test.py  isnan_op_test.py  layernorm_op_test.py  logicalor_op_test.py  max_op_test.py  merge_op_test.py  musa_test_utils.py  sigmoid_op_test.py  softplus_op_test.py  test_runner.py
test/AMP/: InsertCastNode_test.py  PrecisionCompare.py
test/fusion/: __init__.py  clip_fusion_test.py  concat_matmul_fusion_test.py  fuselayernormv2_fusion_test.py  layernorm_fusion_test.py  layernorm_gelu_fusion_test.py  linear_relu_fusion_test.py  matmul_biasadd_fusion.py  matmulbias_relu_fusion_test.py  normalize_fusion_test.py  normalize_subgraph.pb  prelu_fusion_test.py  rgprojection_fusion_test.py  shifted_affine_map_fusion_test.py  sigmoid_calibration_fusion_test.py  tensordot_bias_fusion_test.py  tensordot_bias_subgraph.pb  tensordot_fusion_test.py  tensordot_subgraph.pb
test/ops/: SquaredDifference_op_test.py  abs_op_test.py  add_op_test.py  addn_op_test.py  apply_adagrad_op_test.py  apply_gradient_descent_op_test.py  apply_resource_op_test.py  apply_rmsprop_op_test.py  applyadam_op_test.py  argmax_op_test.py  assign_op_test.py  assignvar_op_test.py  biasadd_grad_op_test.py  biasadd_op_test.py  bitwise_and_op_test.py  broadcast_gradient_args_op_test.py  broadcast_to_op_test.py  cast_BF16_op_test.py  cast_op_test.py  clip_op_test.py  concat_offset_op_test.py  concat_op_test.py  conv2d_backward_op_test.py  conv2d_op_test.py  convert_graphdef_pbtxt_to_pb.py  diagpart_op_test.py  div_no_nan_op_test.py  einsum_op_test.py  equal_op_test.py  erf_op_test.py  exp_op_test.py  expand_dims_op_test.py  expm1_op_test.py  fill_op_test.py  floor_div_op_test.py  floor_mod_op_test.py  fused_batchnorm_hcnw_op_test.py  fused_batchnorm_op_test.py  gather_op_test.py  gather_variable_test.py  (+76 more)
(+109 files in other folders)
